hover method added

--- a/Project02_SingleGamePage/index.html
+++ b/Project02_SingleGamePage/index.html
@@ -111,7 +111,7 @@
         </div>
 
         <div class="pageTwo" style="display: block;">
-            <table class="table caption-top table-hover">
+            <table class="table caption-top">
                 <thead class="table-dark">
                     <tr>
                         <th id="laps">Laps</th>
@@ -173,7 +173,7 @@
             </div>
 
             <div id="userFight">
-                <table class="table table-dark table-hover">
+                <table class="table table-dark">
                     <thead>
                         <tr>
                             <th id="cross">#</th>
@@ -264,6 +264,7 @@
             userFourName = $('#userFourInput').val();
             numberOfLaps = $('#inputGroupSelect01').val();
             checkedUser();
+            hoverCells(userChecked);
             if (moreChecked != 1) {
                 alert("more than one user");
             } else {
@@ -271,25 +272,42 @@
             }
 
         }
+        function hoverCells(selectedUser) {
+
+            if (selectedUser == userOneName) {
+                alert(selectedUser + " + " + userOneName);
+                // $("#userOneTableInput-1").css("background-color", "#ff3300");
+
+            }
+            if (selectedUser == userTwoName) {
+                alert(selectedUser + " + " + userTwoName);
+            }
+            if (selectedUser == userThreeName) {
+                alert(selectedUser + " + " + userThreeName);
+            }
+            if (selectedUser == userFourName) {
+                alert(selectedUser + " + " + userFourName);
+            }
+        }
 
         function checkedUser() {
             let chbx1 = document.getElementById("chbx1");
             let chbx2 = document.getElementById("chbx2");
             let chbx3 = document.getElementById("chbx3");
             let chbx4 = document.getElementById("chbx4");
-            if (chbx1.checked == true) {
+            if (chbx1.checked) {
                 userChecked = userOneName;
                 moreChecked++;
             }
-            if (chbx2.checked == true) {
+            if (chbx2.checked) {
                 userChecked = userTwoName;
                 moreChecked++;
             }
-            if (chbx3.checked == true) {
+            if (chbx3.checked) {
                 userChecked = userThreeName;
                 moreChecked++;
             }
-            if (chbx4.checked == true) {
+            if (chbx4.checked) {
                 userChecked = userFourName;
                 moreChecked++;
             }
