--- a/Project02_SingleGamePage/index.html
+++ b/Project02_SingleGamePage/index.html
@@ -348,9 +348,9 @@
                 $(("#lapCheckInputID-" + (i + 1))).change(function () {
                     var $input = $(this);
                     if ($input.prop("checked") == true) {
-                        if($("#userOneTableInput-" + (i + 1)).val() $("#userTwoTableInput-" + (i + 1)).val(), $("#userThreeTableInput-" + (i + 1)).val(), $("#userFourTableInput-" + (i + 1)).val(), (i + 1)){
+                        // if($("#userOneTableInput-" + (i + 1)).val() $("#userTwoTableInput-" + (i + 1)).val(), $("#userThreeTableInput-" + (i + 1)).val(), $("#userFourTableInput-" + (i + 1)).val(), (i + 1)){
                             
-                        }
+                        // }
                         arrayAdder($("#userOneTableInput-" + (i + 1)).val(), $("#userTwoTableInput-" + (i + 1)).val(), $("#userThreeTableInput-" + (i + 1)).val(), $("#userFourTableInput-" + (i + 1)).val(), (i + 1));
 
                         $("#lapCheckInputID-" + (i + 1)).prop("disabled", true);
